Correctly use visible variable in no file sign

--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -18,6 +18,7 @@
     color: #ffffff;
     display: flex;
     align-items: center;
+    transform: translate(-50%, 0);
 
     div {
       color: #4A4A4A;
